# mmuxer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yaml
docs/: advanced_usage.md
mail_juicer/: MANIFEST.in  __main__.py  config_state.py  misc.py
mail_juicer/cli/: folder.py  run.py
mail_juicer/models/: __init__.py  action.py  condition.py  enums.py  filter.py  rule.py  settings.py
mmuxer/: __main__.py  config_state.py  mailbox.py  utils.py  workers.py
mmuxer/cli/: folder.py  managesieve.py  operations.py  purge.py  run.py  sieve.py  sieve_export.py
mmuxer/models/: action.py  common.py  condition.py  enums.py  operation.py  purge_policy.py  rule.py  script.py  settings.py  sieve.py
mmuxer/service/: operation.py
service/: Dockerfile  README.md  mmuxer-user.service  mmuxer.service
tests/: conftest.py  imap_server.py  test_actions.py  test_condition.py  test_rule_apply.py  test_utils.py
tests/commands/: test_tidy.py
tests/data/models/: filters.yaml  rules.yaml
tests/models/: test_operation.py  test_parse_filter.py  test_parse_rule.py  test_sieve.py
