[project]
name = "mail_juicer"
version = "0.1"
description = "Manage mail from your server."
authors = [
    {name = "Mathias Millet", email="mathias@mmill.eu"},
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
  "typer[all]>=0.7, <0.8",
  "pydantic[dotenv]>=1.10,<2",
  "pyyaml",
  "imap-tools",
  "certifi",
]

[project.scripts]
mail_juicer = "mail_juicer.__main__:app"

[build-system]
requires = [
    "setuptools >= 60.9.3",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pre-commit >= 2.0",
    "pytest-bg-process",
    "pytz",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mail_juicer*"]

[tool.pytest.ini_options]
background-cmd="python tests/imap_server.py"
background-log=".imap_server.log"


[tool.pycln]
all = true

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true